# DeepLearning

./: .gitignore  README.md  pyproject.toml  pytorch.py  vscode_shortcuts.txt
bjarke/: W01_logistic_regression.ipynb  W02_pytorch_intro.ipynb  test.py  test_cuda.ipynb  w1_logistic_regression_student.ipynb
jonathan/: Assignment_1_Jonathan.ipynb  Week3_DeepLearning_2.ipynb  Week3_DeepLearning_3.ipynb  week_1.ipynb  week_1_jupyter.ipynb  week_2_jupyter.ipynb  week_3_1.ipynb  week_3_2.ipynb  week_3_3.ipynb  week_4.ipynb  week_5.ipynb
kasper/: Week2_.ipynb  Week3_DeepLearning_2.ipynb  Week3_DeepLearning_3.ipynb  test.py  w1_logistic_regression.ipynb  w1_logistic_regression.py  w2_.ipynb
kasper/Assignments/: kasper_moller_au664287.html  kasper_moller_au664287.ipynb
thomas/: Week1.ipynb  Week2.ipynb  Week3.ipynb  Week4.ipynb  best_model.pth  test.ipynb  test.py
thomas/Assignments/Assignment 1/: thomas_christiansen_au661718.ipynb
thomas/Assignments/Assignment_1/: thomas_christiansen_au661718.ipynb
