[tool.poetry]
name = "deeplearning"
version = "0.1.0"
description = ""
authors = ["Kasper Møller Hansen <kasperhansen1998@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.9.2"
matplotlib-inline = "^0.1.7"
scikit-learn = "^1.5.1"
mlxtend = "^0.23.1"
ipykernel = "^6.29.5"
ipython = "^8.27.0"
scipy = "^1.14.1"
tk = "^0.1.0"
torch = "^2.3.1"
torch-directml = "^0.2.4.dev240815"
torchvision = "0.18.1"
torchsummary = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
